--- a/server-pong/client_pong/static/client_pong/pages/landing.html
+++ b/server-pong/client_pong/static/client_pong/pages/landing.html
@@ -3,10 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>FT Transcendence - Login/Registro</title>
-  <!-- FontAwesome (via CDN livre, ou substitua pelo seu kit) -->
+  <!-- Bootstrap CSS (local) -->
   <link rel="stylesheet" href="/static/client_pong/vendor/bootstrap/bootstrap.min.css">
-  <!-- CSS customizado -->
+
+  <!-- Font Awesome (local) -->
   <link rel="stylesheet" href="/static/client_pong/vendor/font-awesome/css/font-awesome.min.css"/>
+
+  <!-- CSS customizado -->
   <link rel="stylesheet" href="/static/client_pong/css/landingPage.css" />
 </head>
 <body>
@@ -40,7 +43,7 @@
     </div>
   </div>
 
-  <!-- Seção para o botão de Partida Local -->
+  <!-- Botão "Iniciar Partida Local" acima do título, centralizado -->
   <div class="my-4 d-flex justify-content-center">
     <button class="btn btn-success" id="btnLocalMatch">
       <i class="fa fa-gamepad me-2"></i>
@@ -48,11 +51,15 @@
     </button>
   </div>
 
+  <!-- Container principal -->
   <div class="vh-100 d-flex flex-column justify-content-center align-items-center">
+    <!-- Título -->
     <h1 class="mb-4 d-flex align-items-center justify-content-center">
       <i class="fa fa-table-tennis me-3"></i>
       FT Transcendence
     </h1>
+
+    <!-- Caixa de Login/Register -->
     <div class="container col-lg-4 border rounded p-4 mx-auto">
       <!-- Nav Tabs para Login e Registro -->
       <ul class="nav nav-tabs" id="authTab" role="tablist">
@@ -81,6 +88,7 @@
           </button>
         </li>
       </ul>
+
       <!-- Conteúdo das tabs -->
       <div class="tab-content pt-3">
         <!-- Aba de Login -->
@@ -89,7 +97,7 @@
             <div class="mb-3">
               <label for="loginEmail" class="form-label">Email</label>
               <input
-                type="text"
+                type="email"
                 class="form-control"
                 id="loginEmail"
                 name="email"
@@ -98,6 +106,7 @@
               />
               <div class="invalid-feedback">Campo obrigatório.</div>
             </div>
+
             <div class="mb-3">
               <label for="loginPassword" class="form-label">Password</label>
               <div class="input-group">
@@ -115,6 +124,7 @@
               </div>
               <div class="invalid-feedback">Campo obrigatório.</div>
             </div>
+
             <!-- Campo para 2FA, inicialmente oculto -->
             <div id="login2FAContainer" class="mb-3" style="display: none;">
               <label for="login2FACode" class="form-label">2FA Code</label>
@@ -127,14 +137,16 @@
               />
               <div class="invalid-feedback">Campo obrigatório.</div>
 
-              <!-- Botão para validar 2FA separadamente -->
+              <!-- Botão para validar 2FA -->
               <button type="button" class="btn btn-outline-secondary mt-2 w-100" id="validate2FABtn">
                 <i class="fa fa-key me-2"></i>
                 Validar 2FA
               </button>
             </div>
+
             <div id="loginSuccessAlert" class="alert alert-success d-none"></div>
             <div id="loginErrorAlert" class="alert alert-danger d-none"></div>
+
             <div class="d-flex justify-content-center py-4">
               <button type="submit" class="btn btn-outline-secondary w-50" id="loginBtn">
                 <i class="fa fa-sign-in me-2"></i> Login
@@ -142,13 +154,14 @@
             </div>
           </form>
         </div>
+
         <!-- Aba de Registro -->
         <div class="tab-pane fade" id="registerTabContent" role="tabpanel">
           <form id="registerForm" novalidate enctype="multipart/form-data">
             <div class="mb-3">
               <label for="registerEmail" class="form-label">Email</label>
               <input
-                type="text"
+                type="email"
                 class="form-control"
                 id="registerEmail"
                 name="email"
@@ -157,6 +170,7 @@
               />
               <div class="invalid-feedback">Campo obrigatório.</div>
             </div>
+
             <div class="mb-3">
               <label for="displayName" class="form-label">Display Name</label>
               <input
@@ -169,6 +183,7 @@
               />
               <div class="invalid-feedback">Campo obrigatório.</div>
             </div>
+
             <div class="mb-3">
               <label for="registerPassword" class="form-label">Password</label>
               <div class="input-group">
@@ -194,6 +209,7 @@
                 <li id="reqSpecialChar" style="color: red;">Ao menos um caractere especial</li>
               </ul>
             </div>
+
             <div class="mb-3">
               <label for="avatar" class="form-label">Avatar</label>
               <div class="d-flex align-items-center">
@@ -213,8 +229,10 @@
               </div>
               <div class="form-text">Tamanho máximo: 1MB</div>
             </div>
+
             <div id="registerSuccessAlert" class="alert alert-success d-none"></div>
             <div id="registerErrorAlert" class="alert alert-danger d-none"></div>
+
             <div class="d-flex justify-content-center py-4">
               <button type="submit" class="btn btn-dark w-50" id="registerBtn">
                 <i class="fa fa-user-plus me-2"></i> Register
@@ -226,9 +244,8 @@
     </div>
   </div>
 
-  <!-- Bootstrap JS Bundle -->
+  <!-- Bootstrap JS (local) -->
   <script src="/static/client_pong/vendor/bootstrap/bootstrap.bundle.min.js"></script>
-  <!-- Script customizado (landing.js) -->
-  <script src="/static/client_pong/js/landing.js"></script>
+
 </body>
 </html>
