fix: page navigation / login/logout

--- a/server-pong/client_pong/static/client_pong/pages/landing.html
+++ b/server-pong/client_pong/static/client_pong/pages/landing.html
@@ -243,9 +243,9 @@
       </div>
     </div>
   </div>
-
   <!-- Bootstrap JS (local) -->
-  <script src="/static/client_pong/vendor/bootstrap/bootstrap.bundle.min.js"></script>
+  <!-- <script src="/static/client_pong/vendor/bootstrap/bootstrap.bundle.min.js"></script> -->
 
+  
 </body>
 </html>
