--- a/server-pong/client_pong/static/client_pong/pages/user-profile.html
+++ b/server-pong/client_pong/static/client_pong/pages/user-profile.html
@@ -1,4 +1,5 @@
 <!-- static/client_pong/pages/user-profile.html -->
+
 <div class="user-profile-container">
   <!-- Container de loading/erro -->
   <div id="profile-loading" class="text-center mt-4">Carregando perfil...</div>
@@ -11,6 +12,11 @@
       <div class="col-md-3 text-center">
         <img id="profile-avatar" class="avatar-lg rounded-circle mb-2" alt="Avatar">
         <h3 id="profile-username" class="h4"></h3>
+      </div>
+      <div class="col-md-9 text-end">
+        <button id="edit-profile-btn" class="btn btn-primary btn-sm mt-3 d-none">
+          <i class="bi bi-pencil-square"></i> Editar Perfil
+        </button>
       </div>
     </div>
 
@@ -42,6 +48,29 @@
       <div class="card-body">
         <ul id="match-history-list" class="list-group"></ul>
       </div>
+    </div>
+  </div>
+
+  <div id="edit-profile-form" class="card mb-4 d-none">
+    <div class="card-body">
+      <h5 class="card-title">Editar Perfil</h5>
+      <form id="profile-form">
+        <div class="mb-3">
+          <label for="display-name" class="form-label">Nome de exibição</label>
+          <input type="text" class="form-control" id="display-name" required>
+        </div>
+
+        <div class="mb-3">
+          <label for="avatar-upload" class="form-label">Foto do perfil</label>
+          <input type="file" class="form-control" id="avatar-upload" accept="image/*">
+          <div class="form-text">Formatos suportados: JPG, PNG, GIF</div>
+        </div>
+
+        <div class="d-flex gap-2">
+          <button type="button" class="btn btn-secondary" onclick="cancelEdit()">Cancelar</button>
+          <button type="submit" class="btn btn-primary">Salvar Alterações</button>
+        </div>
+      </form>
     </div>
   </div>
 </div>
