--- a/server-pong/client_pong/static/client_pong/pages/local-match.html
+++ b/server-pong/client_pong/static/client_pong/pages/local-match.html
@@ -8,6 +8,7 @@
     </div>
   </div>
 
+  <div id="game-over-message" class="d-none text-center"></div>
   <canvas id="pongCanvas" width="800" height="600"></canvas>
 
   <div class="controls">
