--- a/server-pong/client_pong/static/client_pong/pages/tournaments.html
+++ b/server-pong/client_pong/static/client_pong/pages/tournaments.html
@@ -1,1 +1,37 @@
-<h1>Tournaments</h1>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Criar Torneio</title>
+    <link rel="stylesheet" href="/static/client_pong/css/tournaments.css" />
+</head>
+<body>
+    <header>
+        <h1>Criar Torneio</h1>
+    </header>
+    <main>
+        <!-- Formulário para criar torneio -->
+        <section id="create-tournament">
+            <h2>Preencha as informações do torneio</h2>
+            <form id="create-tournament-form">
+                <label for="tournament-name">Nome do Torneio:</label>
+                <input type="text" id="tournament-name" name="name" required placeholder="Nome do torneio">
+
+                <label for="tournament-alias">Alias do Criador:</label>
+                <input type="text" id="tournament-alias" name="alias" required placeholder="Alias do Criador">
+
+                <button type="submit" id="create-tournament-btn" class="botao-inscricao">Criar Torneio</button>
+            </form>
+            <div id="error-message" style="color: red;"></div>
+            <div id="success-message" style="color: green;"></div>
+        </section>
+
+        <!-- Seção para listar os torneios criados -->
+        <section id="torneios">
+            <!-- Torneios serão carregados aqui -->
+        </section>
+    </main>
+    <script src="/static/client_pong/js/tournaments.js"></script>
+</body>
+</html>
