--- a/server-pong/client_pong/static/client_pong/pages/local-match.html
+++ b/server-pong/client_pong/static/client_pong/pages/local-match.html
@@ -8,8 +8,9 @@
     </div>
   </div>
 
-  <div id="game-over-message" class="d-none text-center"></div>
-  <canvas id="pongCanvas" width="800" height="600"></canvas>
+  <div id="game-container" class="position-relative">
+    <canvas id="pongCanvas" width="800" height="600"></canvas>
+  </div>
 
   <div class="controls">
     <p>Jogador 1: W/S | Jogador 2: ↑/↓</p>
