--- a/server-pong/client_pong/static/client_pong/pages/navbar.html
+++ b/server-pong/client_pong/static/client_pong/pages/navbar.html
@@ -32,7 +32,7 @@
     <!-- DIREITA: Seletor de idioma + Botão Sair -->
     <div class="d-flex align-items-center gap-3">
       <div class="language-selector d-flex gap-2">
-        <div class="language-card" onclick="handleLanguageChange('pt_BR')">
+        <div class="language-card" data-lang="pt_BR">
           <img
             src="/static/client_pong/images/brazil-flag-round-circle-icon.svg"
             alt="Português (Brasil)"
@@ -40,7 +40,7 @@
           />
           <span class="language-text">PT-BR</span>
         </div>
-        <div class="language-card" onclick="handleLanguageChange('en')">
+        <div class="language-card" data-lang="en">
           <img
             src="/static/client_pong/images/uk-flag-round-circle-icon.svg"
             alt="English"
@@ -48,7 +48,7 @@
           />
           <span class="language-text">EN</span>
         </div>
-        <div class="language-card" onclick="handleLanguageChange('es')">
+        <div class="language-card" data-lang="es">
           <img
             src="/static/client_pong/images/spain-flag-round-icon.svg"
             alt="Español"
