--- a/server-pong/client_pong/static/client_pong/pages/home.html
+++ b/server-pong/client_pong/static/client_pong/pages/home.html
@@ -1,1 +1,29 @@
-<h1>Home</h1>
+<!DOCTYPE html>
+<html lang="pt">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FT_TRANSCENDENCE</title>
+
+    <!-- Bootstrap CSS (local) -->
+    <!--<link rel="stylesheet" href="/static/client_pong/vendor/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/client_pong/vendor/font-awesome/css/font-awesome.min.css">-->
+    <link rel="stylesheet" href="/static/client_pong/css/home.css">
+</head>
+<body>
+    <div class="container text-center">
+
+        <!-- Saudação ao jogador com display_name -->
+        <h1 class="h1-greeting">
+            Bem-vindo, <span id="displayName" class="highlighted-name">Carregando...</span>!
+        </h1>
+
+        <!-- Texto FT_TRANSCENDENCE estilizado -->
+        <h2 class="h2-title">FT_TRANSCENDENCE</h2>
+        <hr>
+
+        <!-- Animação da bola de Pong -->
+        <div class="pong-ball"></div>
+    </div>
+</body>
+</html>
