--- a/server-pong/client_pong/static/client_pong/pages/game.html
+++ b/server-pong/client_pong/static/client_pong/pages/game.html
@@ -2,6 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="/static/client_pong/css/game.css">
   <title>Remote Match</title>
 </head>
 <body>
