--- a/server-pong/client_pong/static/client_pong/pages/tournaments.html
+++ b/server-pong/client_pong/static/client_pong/pages/tournaments.html
@@ -6,6 +6,10 @@
   <link rel="stylesheet" href="/static/client_pong/css/tournaments.css" />
 </head>
 <body>
+
+  <!-- Loading Indicator -->
+  <div id="tournaments-loading" class="loading">Carregando torneios...</div>
+
   <header>
     <h1>Lista de Torneios</h1>
   </header>
