--- a/server-pong/client_pong/static/client_pong/pages/navbar.html
+++ b/server-pong/client_pong/static/client_pong/pages/navbar.html
@@ -10,51 +10,25 @@
       />
       <div>
         <!-- “Jogo Pong” com o ícone da raquete -->
-        <span class="user-title d-block" data-i18n="navbar.app_title">
+        <span class="user-title d-block">
           Jogo Pong <i class="fa fa-table-tennis ms-2"></i>
         </span>
         <!-- Saudação atualizada via JS -->
-        <span class="user-greeting" data-i18n="navbar.greeting"></span>
+        <span class="user-greeting">Olá, </span>
       </div>
     </a>
 
     <!-- CENTRO: Links de Navegação -->
     <div class="d-flex gap-3">
-      <a href="/pong/chat" data-link class="nav-link p-0" data-i18n="navbar.chat">Chat</a>
-      <a href="/pong/tournaments" data-link class="nav-link p-0" data-i18n="navbar.tournaments">Torneios</a>
-      <a href="/pong/user-profile/0" data-link id="navbarProfileLink" class="nav-link p-0" data-i18n="navbar.profile">Perfil</a>
-      <a href="/pong/ranking" data-link class="nav-link p-0" data-i18n="navbar.ranking">Ranking</a>
+      <a href="/pong/chat" data-link class="nav-link p-0">Chat</a>
+      <a href="/pong/tournaments" data-link class="nav-link p-0">Torneios</a>
+      <a href="/pong/user-profile/0" data-link id="navbarProfileLink" class="nav-link p-0">Perfil</a>
+      <a href="/pong/ranking" data-link class="nav-link p-0">Ranking</a>
     </div>
 
-    <!-- DIREITA: Seletor de idioma + Botão Sair -->
+    <!-- DIREITA: Botão Sair -->
     <div class="d-flex align-items-center gap-3">
-      <div class="language-selector d-flex gap-2">
-        <div class="language-card" data-lang="pt_BR">
-          <img
-            src="/static/client_pong/images/brazil-flag-round-circle-icon.svg"
-            alt="Português (Brasil)"
-            class="language-flag"
-          />
-          <span class="language-text">PT-BR</span>
-        </div>
-        <div class="language-card" data-lang="en">
-          <img
-            src="/static/client_pong/images/uk-flag-round-circle-icon.svg"
-            alt="English"
-            class="language-flag"
-          />
-          <span class="language-text">EN</span>
-        </div>
-        <div class="language-card" data-lang="es">
-          <img
-            src="/static/client_pong/images/spain-flag-round-icon.svg"
-            alt="Español"
-            class="language-flag"
-          />
-          <span class="language-text">ES</span>
-        </div>
-      </div>
-      <button class="btn btn-outline-secondary" id="btnLogout" onclick="handleLogout()" data-i18n="navbar.logout">
+      <button class="btn btn-outline-secondary" id="btnLogout" onclick="handleLogout()">
         Sair
       </button>
     </div>
