--- a/server-pong/client_pong/static/client_pong/pages/landing.html
+++ b/server-pong/client_pong/static/client_pong/pages/landing.html
@@ -51,6 +51,13 @@
     </button>
   </div>
 
+  <div class="my-4 d-flex justify-content-center">
+    <button class="btn btn-success" id="btnGame3D">
+      <i class="fa fa-gamepad me-2"></i>
+      Iniciar Jogo 3D
+    </button>
+  </div>
+
   <!-- Container principal -->
   <div class="vh-100 d-flex flex-column justify-content-center align-items-center">
     <!-- Título -->
