fix gameRemote game3D Ranking Tournaments UserProfile

--- a/server-pong/client_pong/static/client_pong/pages/game.html
+++ b/server-pong/client_pong/static/client_pong/pages/game.html
@@ -41,6 +41,12 @@
     </div>
   </div>
 
+  <!-- Botões de controle para mobile -->
+  <div id="mobile-controls" class="mobile-controls">
+    <button id="mobile-control-up">▲</button>
+    <button id="mobile-control-down">▼</button>
+  </div>
+
   <!-- Carregue o script depois que o DOM estiver pronto -->
   <script src="/static/client_pong/js/game.js"></script>
 </body>
