--- a/server-pong/client_pong/static/client_pong/pages/game3D.html
+++ b/server-pong/client_pong/static/client_pong/pages/game3D.html
@@ -21,6 +21,14 @@
       <div id="countdownOverlay">3</div>
     </div>
 
+    <!-- Botões de controle para mobile -->
+    <div id="mobileControls" class="mobile-controls">
+      <button id="btnW">W</button>
+      <button id="btnS">S</button>
+      <button id="btnUp">↑</button>
+      <button id="btnDown">↓</button>
+    </div>
+
     <!-- Painel de configurações à direita -->
     <div id="configPanel">
       <h3>Configurações</h3>
